--- a/track.html
+++ b/track.html
@@ -45,7 +45,7 @@
       </nav>
 
       <div class="flex items-center gap-3">
-        <a  id="openAdminBtn" href="#" class="hidden md:inline-block px-4 py-2 bg-blue-600 text-white rounded-md text-sm">Admin</a>
+        <!-- <a  id="openAdminBtn" href="#" class="hidden md:inline-block px-4 py-2 bg-blue-600 text-white rounded-md text-sm">Admin</a> -->
         <button class="md:hidden p-2" id="mobileBtn">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8h16M4 16h16" />
@@ -63,6 +63,7 @@
       <a class="block py-2" href="./about.html">About Us</a>
       <!-- <a class="block py-2" href="https://postlogisticstracking.onrender.com/">Track</a> -->
       <a class="block py-2" href="#">Contact</a>
+      <a  id="openAdminBtn" href="#" class="hidden md:inline-block px-4 py-2 bg-blue-600 text-white rounded-md text-sm">Admin</a>
     </div>
   </header>
 
