--- a/track.html
+++ b/track.html
@@ -63,7 +63,7 @@
       <a class="block py-2" href="./about.html">About Us</a>
       <!-- <a class="block py-2" href="https://postlogisticstracking.onrender.com/">Track</a> -->
       <a class="block py-2" href="#">Contact</a>
-      <a  id="openAdminBtn" href="#" class="hidden md:inline-block px-4 py-2 bg-blue-600 text-white rounded-md text-sm">Admin</a>
+      <a  id="openAdminBtn" href="#" class=" px-4 py-2 bg-blue-600 text-white rounded-md text-sm">Admin</a>
     </div>
   </header>
 
