--- a/about.html
+++ b/about.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content="Post & Logistics Groups offers fast, reliable, and global air freight shipping solutions. Secure transport, competitive rates, and real-time tracking.">
+  <link rel="icon" type="image/png" href="https://img.freepik.com/premium-vector/free-vector-illustration-tracking-order-icon-button-tab_822642-208.jpg">
   <title>About Us | Post & Logistics</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -25,7 +27,7 @@
         <a href="./sea-freight.html" class="hover:text-blue-600">Sea Freight</a>
         <a href="./road-freight.html" class="hover:text-blue-600">Road Freight</a>
         <a href="/about.html" class="text-blue-600 font-semibold">About Us</a>
-        <a href="https://postlogisticstracking.onrender.com/" class="hover:text-blue-600">Track</a>
+        <a href="./track.html" class="hover:text-blue-600">Track</a>
         <a href="contact.html" class="hover:text-blue-600">Contact</a>
       </nav>
     </div>
@@ -40,8 +42,8 @@
       <a class="block py-2" href="./air-freight.html">Air Freight</a>
       <a class="block py-2" href="./road-freight.html">Road Freight</a>
       <a class="block py-2" href="./sea-freight.html">Sea Freight</a>
-      <a class="block py-2" href="/about.html">About Us</a>
-      <a class="block py-2" href="https://postlogisticstracking.onrender.com/">Track</a>
+      <!-- <a class="block py-2" href="/about.html">About Us</a> -->
+      <a class="block py-2" href="./track.html">Track</a>
       <a class="block py-2" href="#">Contact</a>
     </div>
   </header>
