--- a/road-freight.html
+++ b/road-freight.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+   <meta name="description" content="Post & Logistics Groups offers fast, reliable, and global air freight shipping solutions. Secure transport, competitive rates, and real-time tracking.">
+  <link rel="icon" type="image/png" href="https://img.freepik.com/premium-vector/free-vector-illustration-tracking-order-icon-button-tab_822642-208.jpg">
   <title>Road Freight | Post & Logistics</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
