--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Post & Logistics - Tailwind Prototype</title>
+   <meta name="description" content="Post & Logistics Groups offers fast, reliable, and global air freight shipping solutions. Secure transport, competitive rates, and real-time tracking.">
+  <link rel="icon" type="image/png" href="https://img.freepik.com/premium-vector/free-vector-illustration-tracking-order-icon-button-tab_822642-208.jpg">
+  <title>Post & Logistics</title>
   <!-- Tailwind CDN for quick prototype -->
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -95,7 +97,7 @@
           <label class="text-xs text-gray-500">Enter the Consignment No.</label>
           <div class="mt-3 flex gap-3">
             <input type="text" placeholder="Ex: 12345" class="flex-1 border border-gray-200 rounded px-4 py-2" />
-            <a href="https://postlogisticstracking.onrender.com/"><button class="px-4 py-2 bg-blue-600 text-white rounded">Track</button></a>
+            <a href="./track.html"><button class="px-4 py-2 bg-blue-600 text-white rounded">Track</button></a>
           </div>
         </div>
 
