--- a/track.html
+++ b/track.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Package Tracking Demo</title>
+   <meta name="description" content="Post & Logistics Groups offers fast, reliable, and global air freight shipping solutions. Secure transport, competitive rates, and real-time tracking.">
+  <link rel="icon" type="image/png" href="https://img.freepik.com/premium-vector/free-vector-illustration-tracking-order-icon-button-tab_822642-208.jpg">
+  <title>Package Tracking </title>
 
   <!-- Tailwind Play CDN for quick prototyping -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -30,7 +32,7 @@
       </a>
 
       <nav class="hidden md:flex items-center gap-6 text-sm">
-        <a href="#" class="hover:text-blue-600">Home</a>
+        <a href="./index.html" class="hover:text-blue-600">Home</a>
         <div class="group relative">
           <button class="hover:text-blue-600">Our Services</button>
           <div class="absolute left-0 mt-2 bg-white rounded shadow-md py-2 w-40 opacity-0 group-hover:opacity-100 transition">
